# ai-db-qc

./: .gitignore  BUG_TAXONOMY.md  README.md  THEORY.md  cleanup.bat  conftest.py  docker-compose.yml  idx003_idx004_out.txt  idx_out.txt  idx_out2.txt  idx_out3.txt  pyproject.toml  r7_out.txt  reproduction_verification.json  requirements.txt  run_smoke.py  semantic_med_out.txt  semantic_run_out.txt  smoke_layer_i.py  smoke_r4.py  test_adapters.py  test_compare_structure.py  test_debug_runner.py  test_pgvector_health.py  test_setup_debug.py  test_weaviate_ops.py
adapters/: base.py  milvus_adapter.py  mock.py  pgvector_adapter.py  qdrant_adapter.py  seekdb_adapter.py  weaviate_adapter.py
ai_db_qa/: __init__.py  __main__.py  cli_parsers.py  embedding.py  multi_layer_oracle.py  semantic_datagen.py
analysis/: __init__.py  build_tables.py  export_case_studies.py  export_case_studies_5.3.py  summarize_runs.py
campaigns/: aggressive_bug_mining.yaml  bug_mining_conc_fuzz.yaml  compare_example.yaml  generate_example.yaml  r1_milvus_core.yaml  r2_param_validation.yaml  validate_example.yaml
capabilities/: README.md  milvus_capabilities.json  mock_capabilities.json  qdrant_capabilities.json  seekdb_capabilities.json
casegen/: __init__.py
configs/: database_connections.yaml  phase5_eval.yaml
contracts/: CONTRACT_COVERAGE_INDEX.json  VALIDATION_MATRIX.json
core/: __init__.py  contract_registry.py  contract_test_generator.py  dataset_generators.py  discovery_generator.py  hybrid_generator.py  oracle_engine.py  three_valued_logic.py
docs/: CONCURRENCY_CONTRACT_DESIGN.md  (+111 more)
(+702 files in other folders)
