[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-db-qc"
version = "0.1.0"
description = "Contract-driven AI database quality assurance prototype"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["pydantic>=2.0.0", "pyyaml>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pydantic>=2.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v"
