[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-db-qa"
version = "0.1.0"
description = "AI Database QA Tool"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["pymilvus>=2.3.0", "pyyaml>=6.0", "pydantic>=2.0.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pydantic>=2.0.0"]

[project.scripts]
ai-db-qa = "ai_db_qa.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v"
